...
                                    24.0, 16.0, 24.0, 16.0),
                                child: Column(
                                  key: ValueKey('btottomContent_8u84'),
                                  mainAxisSize: MainAxisSize.max,
                                  crossAxisAlignment: CrossAxisAlignment.start,
...
                                                0.2,
                                            child: TextFormField(
                                              key: ValueKey('height_l4g6'),
                                              controller:
                                                  _model.heightTextController,
...
                                                0.2,
                                            child: TextFormField(
                                              key: ValueKey('weght_mp8c'),
                                              controller:
                                                  _model.weghtTextController,
...
                                                  0.3,
                                          child: TextFormField(
                                            key: ValueKey('heartBeat_9tiq'),
                                            controller:
                                                _model.heartBeatTextController,
...
                                            child: TextFormField(
                                              key: ValueKey(
                                                  'breathingRhym_zm4p'),
                                              controller: _model
                                                  .breathingRhymTextController,
...
                                                  0.2,
                                          child: TextFormField(
                                            key: ValueKey('bloodPressure_pae7'),
                                            controller: _model
                                                .bloodPressureTextController1,
...
                                            child: TextFormField(
                                              key: ValueKey(
                                                  'bloodPressure_xnrx'),
                                              controller: _model
                                                  .bloodPressureTextController2,
...
                                          0.5,
                                      child: TextFormField(
                                        key: ValueKey('diagnosis_g7zi'),
                                        controller:
                                            _model.diagnosisTextController,
...
                                          0.5,
                                      child: TextFormField(
                                        key: ValueKey('examination_bkd4'),
                                        controller:
                                            _model.examinationTextController,
...
                                          child: TextFormField(
                                            key: ValueKey(
                                                'paraclinicaImaging_uvfv'),
                                            controller: _model
                                                .paraclinicaImagingTextController,
...
                                        FlutterFlowDropDown<String>(
                                          key:
                                              ValueKey('medicineDropdown_q260'),
                                          controller: _model
                                                  .medicineDropdownValueController ??=
...
                                          width: double.infinity,
                                          child: TextFormField(
                                            key: ValueKey('note_h613'),
                                            controller:
                                                _model.noteTextController,
...
                                                0.3,
                                            child: TextFormField(
                                              key: ValueKey('morning_ms0n'),
                                              controller:
                                                  _model.morningTextController,
...
                                                0.3,
                                            child: TextFormField(
                                              key: ValueKey('afternoon_67dw'),
                                              controller: _model
                                                  .afternoonTextController,
...
                                                0.3,
                                            child: TextFormField(
                                              key: ValueKey('evening_yycy'),
                                              controller:
                                                  _model.eveningTextController,
...
                                                0.3,
                                            child: TextFormField(
                                              key: ValueKey('day_4m6t'),
                                              controller:
                                                  _model.dayTextController,
...
                                        ),
                                        FFButtonWidget(
                                          key: ValueKey('Button_77eq'),
                                          onPressed: (widget!.record?.status ==
                                                  'Đã thực hiện')
...
                              ),
                              FFButtonWidget(
                                key: ValueKey('Button_l4a6'),
                                onPressed: (widget!.record?.status ==
                                        'Đã thực hiện')
...
