...
                          padding: EdgeInsets.all(20.0),
                          child: Builder(
                            builder: (context) {
                              final record = FFAppState().records.toList();

                              return FlutterFlowDataTable<RecordStruct>(
                                key: ValueKey('PaginatedDataTable_la31'),
                                controller: _model.paginatedDataTableController,
                                data: record,
                                columnsBuilder: (onSortChanged) => [
                                  DataColumn2(
                                    label: DefaultTextStyle.merge(
                                      softWrap: true,
...
                                            fontSize: 16.0,
                                            letterSpacing: 0.0,
                                            fontWeight: FontWeight.w500,
                                          ),
                                    ),
                                    FFButtonWidget(
                                      key: ValueKey('Button_nzse'),
                                      onPressed: () async {
                                        context.pushNamed(
                                          'AddRecord',
                                          queryParameters: {
                                            'record': serializeParam(
                                              recordItem,
...
