...
                                        10.0, 0.0, 10.0, 10.0),
                                    child: Column(
                                      mainAxisSize: MainAxisSize.min,
                                      mainAxisAlignment: MainAxisAlignment.end,
                                      children: [
                                        FFButtonWidget(
                                          key: const ValueKey('btnLogin_0tpc'),
                                          onPressed: () async {
                                            // ValidateForm
                                            if (_model.formKey.currentState ==
                                                    null ||
                                                !_model.formKey.currentState!
                                                    .validate()) {
...
                                                        MainAxisAlignment
                                                            .center,
                                                    children: [
                                                      Expanded(
                                                        child: TextFormField(
                                                          key: const ValueKey(
                                                              'tfPhoneNumber_jiu6'),
                                                          controller: _model
                                                              .tfPhoneNumberTextController,
                                                          focusNode: _model
                                                              .tfPhoneNumberFocusNode,
                                                          obscureText: false,
                                                          decoration:
...
                                                                      0.0,
                                                                      25.0,
                                                                      0.0,
                                                                      0.0),
                                                          child: TextFormField(
                                                            key: const ValueKey(
                                                                'tfPassword_57il'),
                                                            controller: _model
                                                                .tfPasswordTextController,
                                                            focusNode: _model
                                                                .tfPasswordFocusNode,
                                                            obscureText: !_model
                                                                .tfPasswordVisibility,
...
