...
    },
    'fkl0ql53': {
      'vi': 'Mật khẩu hiện tại *',
      'en': 'Current Password *',
    },
    'xw6xt8q5': {
      'vi': 'Mật khẩu không đúng!!',
      'en': 'Password is incorrect!!',
    },
    'm7h4gh2i': {
      'vi': 'Mật khẩu mới *',
      'en': 'New Password *',
    },
...
      'en': 'Home',
    },
  },
  // homePage
  {
    '1pb003g9': {
      'vi': 'MEDICARE Xin Chào!',
      'en': 'MEDICARE Hi !',
    },
    'oaxo5d0u': {
      'vi': 'Home',
      'en': '',
    },
...
